Resolve NNO-10481 "Story/"